# Graph-3-coloring

./: README.md
data/: randomized_3coloring_algo_p=0.3.csv
data/randomized_3coloring_algo_bench/: p=0.5.csv  p=0.7.csv  p=0.9.csv
data/randomized_csp_solver_bench/: p=0.1.csv  p=0.125.csv  p=0.15.csv  p=0.175.csv  p=0.2.csv
data/randomized_csp_solver_distribution_bench/: RandomizedCSPSolverOneGraphIterDistributionBenchmark.p=0.15.csv
scripts/: draw_randomized_3coloring_algo_bench_chart.py  draw_randomized_3coloring_algo_bench_hist.py  draw_randomized_algo_bench_chart.py  draw_randomized_csp_solver_bench_chart.py  draw_randomized_csp_solver_bench_hist.py
src/: CMakeLists.txt
src/algo/: CMakeLists.txt  graph_coloring_algo.h  randomized_3coloring_algo.cpp  randomized_3coloring_algo.h  randomized_CSP_algo.cpp  randomized_CSP_algo.h  randomized_CSP_solver.cpp  randomized_CSP_solver.h  randomized_algo.cpp  randomized_algo.h
src/base/: CMakeLists.txt  CSP.cpp  CSP.h  coloring.h  graph.cpp  graph.h
src/benchmark/: CMakeLists.txt  benchmark_driver.cpp  benchmark_driver.h  main.cpp
src/math_utility/: 2SAT_solver.cpp  CMakeLists.txt  graph_coloring_checker.cpp  graph_generator.cpp  graph_generator.h  random_graph_generator.cpp  random_graph_generator.h
src/utility/: 2SAT_solver.cpp  2SAT_solver.h  CMakeLists.txt  csv_writer.cpp  csv_writer.h  graph_coloring_checker.h  loggable_component.cpp  loggable_component.h  random_graph_generator.cpp  random_graph_generator.h  random_values_generator.cpp  random_values_generator.h  timer.h  two_SAT_solver.cpp
